WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44619
drawGDIGlyphs checks if the offset is empty incorrectly causing problems with the shadow
https://bugs.webkit.org/show_bug.cgi?id=44619
Summary
drawGDIGlyphs checks if the offset is empty incorrectly causing problems with...
Alejandro G. Castro
Reported
2010-08-25 10:15:35 PDT
From the comment:
https://bugs.webkit.org/show_bug.cgi?id=44603#c5
(In reply to
comment #2
)
> After changing the names I've realized that this condition could be wrong but the old name could make it seem correct: > > + drawIntoBitmap = !offset.isEmpty() || blur; > > It is in this file: WebCore/platform/graphics/win/FontCGWin.cpp static void drawGDIGlyphs > > Could someone check if in Windows negative offsets of the text actually work, or no offsets but blurring. We could open a new bug in this case.
I’ve asked someone to check, and indeed in <data:text/html,%3Cdiv%20style=%22-webkit-font-smoothing:%20none%22%3E%3Cdiv%20style=%22text-shadow:%202px%202px%20red%22%3Etest%3C/div%3E%3Cdiv%20style=%22text-shadow:%20-2px%20-2px%20red%22%3Etest%3C/div%3E%3C/div%3E> the bottom line is missing the shadow. Good catch!
Attachments
Proposed patch
(1.25 KB, patch)
2010-08-26 01:39 PDT
,
Alejandro G. Castro
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2010-08-26 01:39:06 PDT
Created
attachment 65534
[details]
Proposed patch I can not test the patch but I guess at least it can be used as a initial point.
Alejandro G. Castro
Comment 2
2010-08-27 02:23:35 PDT
landed
r66192
, closing bug
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug