2010-08-27  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Dan Bernstein.

        drawGDIGlyphs checks if the offset is empty incorrectly causing
        problems with the shadow
        https://bugs.webkit.org/show_bug.cgi?id=44619

        Removed the offset empty condition, now we just check if we have
        offset or blur.

        * platform/graphics/win/FontCGWin.cpp:
        (WebCore::drawGDIGlyphs):

Canonical link: https://commits.webkit.org/56964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66192 268f45cc-cd09-0410-ab3c-d52691b4dbfc